<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.kenny.kdg_aquarium.FoodActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="125dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/amorino_beta"
        android:text="@string/aquarium"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="129dp"
        android:layout_height="70dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/adonais"
        android:text="@string/kdg"
        android:textColor="@android:color/background_light"
        android:textSize="70sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="172dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/quantidade_de_refei_es"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quantidade_refeicao"
        android:layout_width="150dp"
        android:layout_height="115dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="172dp"
        android:autofillHints=""
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/botao_confirmar_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:elevation="@dimen/fab_margin"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/confirmar"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/botao_baixo"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/botao_baixo"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="224dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="false"
        android:background="@drawable/botao_cima"
        android:elevation="4dp"
        app:srcCompat="@drawable/botao_cima"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="299dp" />


</android.support.constraint.ConstraintLayout>
